force-app/main/default/objects/Asset_CSV_Mapping__mdt/Asset_CSV_Mapping__mdt.object-meta.xml
<CustomObject>
    <description>The Asset CSV Upload LWC mappings for Column Names and API Field Names</description>
    <label>Asset CSV Mapping</label>
    <pluralLabel>Asset CSV Mappings</pluralLabel>
</CustomObject>