force-app/main/default/objects/Asset_CSV_Mapping__mdt/fields/CSV_Column_Name__c.field-meta.xml
<CustomField>
    <fullName>CSV_Column_Name__c</fullName>
    <description>The column in the CSV File</description>
    <label>CSV Column Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>