force-app/main/default/objects/Asset_CSV_Mapping__mdt/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Include this field in the mapping?</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>