force-app/main/default/objects/Asset_CSV_Mapping__mdt/fields/SF_Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>SF_Field_API_Name__c</fullName>
    <description>Salesforce Asset Field API Name</description>
    <label>SF Field API Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>