force-app/main/default/objects/Asset_CSV_Mapping__mdt/validationRules/Asset_Name.validationRule-meta.xml
<ValidationRule>
    <fullName>Asset_Name</fullName>
    <active>true</active>
    <errorConditionFormula>SF_Field_API_Name__c = &apos;Name&apos;</errorConditionFormula>
    <errorMessage>Asset Name is unable to be mapped as Asset Name format is:
&lt;SerialNumber&gt;-&lt;CompKey&gt;-&lt;Suburb&gt;</errorMessage>
</ValidationRule>